deploy/kubernetes/demo/tomcat7-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tomcat7
  namespace: demo
  labels:
    name: tomcat7
spec:
  # Start two Ignite nodes by default.
  #######
  replicas: 2
  revisionHistoryLimit: 100
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      name: tomcat7
      labels:
        service: tomcat7
    spec:
      serviceAccountName: tomcat7
      containers:
        # Custom pod name.
      - name: tomcat7-node
        image: 749833379596.dkr.ecr.us-east-1.amazonaws.com/genospace/tomcat7:demo
        imagePullPolicy: Always 
        ports:
        - name: tomcat-port
          containerPort: 8080 # WEB port number.
        livenessProbe:
          httpGet:
            path: /
            port: tomcat-port
          initialDelaySeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: tomcat-port
          initialDelaySeconds: 5
          timeoutSeconds: 5
        volumeMounts:
          - name: admin-config-groovy-secret-volume
            mountPath: /opt/tomcat/resources
      volumes:
        - name: admin-config-groovy-secret-volume
          secret:
           secretName: admin-config-groovy-secret
