deploy/kubernetes/demo/tomcat7-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomcat7
  namespace: demo
  labels:
    service: tomcat7
spec:
  type: NodePort
  selector:
    service: tomcat7
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
